--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "generate": "node ./server/gen.js > ./server/db.json",
+    "server": "json-server --watch ./server/db.json",
+    "dev": "concurrently \"npm run server\" \"npm run start\""
   },
   "private": true,
   "dependencies": {
@@ -21,6 +23,8 @@
     "@angular/router": "~9.1.11",
     "@ngrx/schematics": "^10.0.1",
     "@ngrx/store": "^9.2.0",
+    "concurrently": "^5.3.0",
+    "json-server": "^0.16.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
