--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@ngrx/schematics": "^10.0.1",
     "@ngrx/store": "^9.2.0",
     "bootstrap": "^4.5.3",
