--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@ngrx/schematics": "^10.0.1",
     "@ngrx/store": "^9.2.0",
+    "@ngrx/store-devtools": "^9.2.0",
     "bootstrap": "^4.5.3",
     "bootswatch": "^4.5.3",
     "concurrently": "^5.3.0",
