--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/schematics": "^11.0.2",
     "@angular/animations": "~9.1.11",
     "@angular/common": "~9.1.11",
     "@angular/compiler": "~9.1.11",
@@ -22,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@ngrx/effects": "^10.0.1",
     "@ngrx/schematics": "^10.0.1",
     "@ngrx/store": "^9.2.0",
     "@ngrx/store-devtools": "^9.2.0",
