--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~9.1.11",
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@ngrx/effects": "^10.0.1",
+    "@ngrx/entity": "^9.2.0",
     "@ngrx/schematics": "^10.0.1",
     "@ngrx/store": "^9.2.0",
     "@ngrx/store-devtools": "^9.2.0",
